---
config:
  layout: elk
  theme: neutral
  class:
    defaultRenderer: elk
---
classDiagram
    direction LR

    class TemplateService {
        -PgSqlConnection conn
        +__construct(conn)
        +getActiveTemplate() Template
        +getTemplateById(id) Template
        +createTemplate(name, headers, structure, makeActive) int
        +setActiveTemplate(id) void
        +saveFilledData(userId, templateId, municipalityId, rows) void
    }

    class Template {
        -int id
        -string name
        -array headers
        -array structure
        -bool active
        -TemplateState state
        +__construct(id, name, headers, structure, active)
        +createEmpty()$ Template
        +getId() int
        +getName() string
        +getHeaders() array
        +getStructure() array
        +isActive() bool
        +getState() TemplateState
        +canBeUsedForFill() bool
    }

    class TemplateState {
        <<interface>>
        +describe() string
        +canBeUsedForFill() bool
        +canBeActivated() bool
    }

    class ActiveTemplateState {
        +describe() string
        +canBeUsedForFill() bool
        +canBeActivated() bool
    }

    class InactiveTemplateState {
        +describe() string
        +canBeUsedForFill() bool
        +canBeActivated() bool
    }

    class NoTemplateState {
        +describe() string
        +canBeUsedForFill() bool
        +canBeActivated() bool
    }

    class User {
        -int user_id
        -string user_login
        -string user_password
        -string user_full_name
        -string user_email
        -string user_phone
        -string role
        -int municipality_id
    }

    class Municipality {
        -int municipality_id
        -string municipality_name
    }

    class FilledData {
        -int id
        -int user_id
        -int template_id
        -int municipality_id
        -array filled_data
        -datetime created_at
    }

    class FeedbackRequest {
        -int id
        -string full_name
        -string contact
        -string message
        -datetime created_at
    }

    TemplateState <|.. ActiveTemplateState
    TemplateState <|.. InactiveTemplateState
    TemplateState <|.. NoTemplateState

    Template "1" *-- "1" TemplateState
    TemplateService "1" --> "*" Template
    TemplateService ..> FilledData

    User "*" --> "1" Municipality
    FilledData "*" --> "1" User
    FilledData "*" --> "1" Template
    FilledData "*" --> "1" Municipality
